force-app/main/default/objects/Commercial_Bill_Fee__x/Commercial_Bill_Fee__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>CommercialBillFee</externalName>
    <label>Commercial Bill Fee</label>
    <pluralLabel>Commercial Bill Fees</pluralLabel>
</CustomObject>