force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Commercial_Bill__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Bill__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Associated Id of Commercial Bill</description>
    <externalDeveloperName>CommercialBillId</externalDeveloperName>
    <label>Commercial Bill</label>
    <length>18</length>
    <referenceTo>Commercial_Bill__x</referenceTo>
    <relationshipLabel>Commercial Bill Fees</relationshipLabel>
    <relationshipName>Commercial_Bill_Fees</relationshipName>
    <type>ExternalLookup</type>
</CustomField>