force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Fee Amount</description>
    <externalDeveloperName>FeeAmount</externalDeveloperName>
    <label>Fee Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>