force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Fee_Frequency__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Fee Frequency</description>
    <externalDeveloperName>FeeFrequency</externalDeveloperName>
    <label>Fee Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>