force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Fee_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Fee Name</description>
    <externalDeveloperName>FeeName</externalDeveloperName>
    <label>Fee Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>