force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fee_Rate__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Fee Rate</description>
    <externalDeveloperName>FeeRate</externalDeveloperName>
    <label>Fee Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>