force-app/main/default/objects/Commercial_Bill_Fee__x/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Sequence number</description>
    <externalDeveloperName>Seq</externalDeveloperName>
    <label>Seq</label>
    <length>18</length>
    <type>Text</type>
</CustomField>